--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,7 @@ frameworkVersion: "2.0.0"
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: dev
+  stage: ${opt:stage, 'dev'}
   region: us-east-2
 
 plugins:
@@ -17,3 +17,5 @@ functions:
     events:
       - http: ANY /
       - http: 'ANY {proxy+}'
+    tags: 
+      Environment: ${opt:stage, 'dev'}
